merapihkan responsive tampilan search-product pages

--- a/src/index.css
+++ b/src/index.css
@@ -43,3 +43,7 @@
 .transform-text-profile{
   @apply font-bold text-slate-600 
 }
+
+.card-search-product{
+  box-shadow: rgba(99, 99, 99, 0.2) 0px 2px 8px 0px;
+}
